# Home-Alert-System

./: README.md
base_node/: CMakeLists.txt  Kconfig  README.md  app.overlay  build_output.txt  prj.conf
base_node/drivers/sensor_node/: CMakeLists.txt  Kconfig  sensor_node.c  sensor_node.h
base_node/dts/bindings/: custom,sensor-node.yaml  zephyr,sensor-node.yaml
base_node/src/: main.c
base_node/tests/: CMakeLists.txt  test_frame_parser.c
build_base/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt
build_base/Kconfig/: Kconfig.dts  Kconfig.modules
build_base/Kconfig/arch/: Kconfig
build_base/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr.uf2  zephyr_pre0.elf  zephyr_pre0.map
build_tests/: CMakeCache.txt  build_info.yml  zephyr_settings.txt
build_tests/Kconfig/: Kconfig.dts  kconfig_module_dirs.cmake  kconfig_module_dirs.env
build_tests/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  edt.pickle  edt.pickle.cmake  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre
protocol/: protocol.h
sensor_node/: .gitignore  CMakeLists.txt  main.c  pico_sdk_import.cmake
(+209 files in other folders)
